2008-01-24  Albert Chu <chu11@llnl.gov>

	* pef-config/src/pef-config-wrapper.h,
	pef-config/src/pef-config-wrapper.c: Remove useless files.

	* pef-config/src/: Adjust files appropriately.

	* pef-config/src/pef-config.c, bmc-config/src/bmc-config.c: Make
	function static.

	* common/src/tool-sdr-cache-common.c: Fix compile issue.
	
2008-01-24  Albert Chu <chu11@llnl.gov>

	* pef-config/pef-config.8.pre.in: Add "GENERAL USE" section.  Fix
	some typos.

	* bmc-config/bmc-config.8.pre.in: Fix some typos.

	* pef-config/src/pef-config-argp.c: Fix doc typo.
	
2008-01-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache-create.c
	(ipmi_sdr_cache_create): Fix record count corner case.
	
2008-01-23  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-ignore-sdr-cache.man: New file.

	* common/src/tool-cmdline-common.h,
	common/src/tool-cmdline-common.c: Add --ignore-sdr-cache support.

	* ipmi-fru/, ipmi-sel/: Support --ignore-sdr-cache option.

	* Adjust argp option groups in all tools.

2008-01-22  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/: Various consistency to other tools fixes.
	
2008-01-22  Albert Chu <chu11@llnl.gov>

	* common/src/tool-common.c (ipmi_open): Try devices more intelligently.

	* libfreeipmi/include/freeipmi/locate/ipmi-locate.h,
	libfreeipmi/src/locate/ipmi-locate.c
	(ipmi_locate_discover_device_info): New function.

	* libfreeipmi/src/locate/ipmi-locate.c
	(_ipmi_locate_get_device_info): Add flag to try/not-try defaults.

2008-01-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/ipmi-api.c (ipmi_ctx_open_inband): Remove
	legacy requirement for required SSIF driver path.
	
2008-01-22  Albert Chu <chu11@llnl.gov>

        * common/doc/manpage-common-inband.man: Tweak english.
	
2008-01-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache.c: Fix "parmaeters" typo.
	
2008-01-22  A Balamurugan  <bala@zresearch.com>

	* common/doc/manpage-common-inband.man: updated.
